# polypharm

./: LICENSE  MANIFEST.in  README.md  polypharm.py  polypharm_protocol.ipynb  pyproject.toml
.github/workflows/: pypi.yml
01_ligands/: LA-2_prot.maegz  LA-3_prot.maegz
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  overview.rst  usage.rst
examples/: usage.ipynb
examples/data/01_ligands/: LA-4_prot.maegz
examples/data/02_proteins/: kv1.5_open_cc.mae  nav1.5_6lqa.mae  task1_6rv3.mae
polypharm/: __init__.py  __main__.py  concurrency.py  helpers.py  polypharm.py
scripts/: report.py
templates/: ifd.inp  interactions.tcl
