[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polypharm"
description = "A Python-based library to perform IFD and MMGBSA calculations on different targets using a polypharmacological approach."
readme = "README.md"
authors = [
    { name = "Mauricio Bedoya", email = "mbedoya@ucm.cl" },
    { name = "Francisco Adasme", email = "fadasme@ucm.cl" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "computational chemistry",
    "polypharmacology",
    "docking",
    "induced fit",
    "free energy",
]
dynamic = ["version"]

requires-python = ">=3.9"
dependencies = ["pandas >= 1.4.3", "jinja2 >= 3.1.2"]

[tool.setuptools.dynamic]
version = { attr = "polypharm.__version__" }

[project.optional-dependencies]
dev = ["black", "isort", "sphinx", "sphinx-rtd-theme", "myst-parser"]

[project.urls]
Homepage = "https://github.com/maurobedoya/polypharm"

[project.scripts]
polypharm = "polypharm.__main__:main"
